# tg-voice-relay

./: Cargo.toml  Cross.toml  README.md
.sqlx/: query-2261d88ec744612428918a5fb4fd29243f5a34f3a239e576c22f0d22d9db4723.json  query-25179e2ecbc95ba50338d52740a70e4b65a508359e88b35979de53c10d96fe60.json  query-287df9bfb4a7efd8e9bff89f4441a7d27a7737cedf2390bc4db831d4d96549c5.json  query-3036ca95df4a6dd7a1f7c99bda7e6dc192ec759473bdc81a1defaac586bdf51b.json  query-9860cee737774076ef60c8b5e9c79308460869e9b73fe8849a49327f231b3ca9.json  query-b0dd0aec9d54bf649df668af38d497717391887dbb341d6fc2f6d4eebefd6372.json  query-ceae46f267fbddd9d6fe7338751238ab76201dbc5d36e29268663a04bba37372.json  query-d176ddbbff06b6685cec050fa024fe9a273cf1e25bf8d014cca026c93b1441c0.json  query-dfb3b8cf5dc4713879965564fd6d0539f1c01eadcbc8a862e87bc1d15448136c.json
migrations/: 0001_initial.sql
src/: ahm.rs  auth_handler.rs  backoff.rs  callback_handler.rs  command.rs  config.rs  db.rs  dialogues.rs  handle_replies.rs  handle_voice_message.rs  heartbeat.rs  inline_data_keyboard.rs  main.rs  msg_handler.rs  my_chat_member_handler.rs  player.rs
src/dialogues/: set_room.rs
