[package]
edition = "2021"
name = "tg-voice-relay"
version = "0.1.0"

[dependencies]
dotenvy = {version = "0.15.7", optional = true}
envy = "0.4.2"
itertools = "0.13.0"
log = "0.4"
pretty_env_logger = "0.4"
rodio = "0.18.1"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
shell-words = "1.1.0"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "sqlite"]}
symphonia = "0.5.4"
teloxide = {git = "https://github.com/teloxide/teloxide.git", rev = "423ef41", features = ["sqlite-storage-nativetls", "macros"]}
thiserror = "1.0.63"
tokio = {version = "1.8", features = ["rt-multi-thread", "macros", "process"]}

[features]
default = ["dotenvy"]

[profile.dev.package.sqlx-macros]
opt-level = 3
